[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "intersections"
version = "0.2.0"
description = "Generate stylized maps of complex traffic-signal intersections."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9,<4",
  "numpy>=2.1,<3",
  "osmnx>=2.1,<3",
  "scikit-learn>=1.6,<2",
  "snakemake>=9.13,<10",
]

[project.scripts]
intersections = "intersections.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/intersections"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["notebooks", "docs/legacy-gallery"]
